# procsearch

./: Cargo.toml  README.md  build.rs
protos/: procsearch.proto
src/: bpf.rs  main.rs
src/bpf/: procexec.bpf.c  procexec.h
