[package]
name = "procsearch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
libbpf-rs = "0.24.8"
log = "0.4.22"
simple_logger = "5.0.0"

[build-dependencies]
libbpf-cargo = "0.24.8"
vmlinux = { version = "0.0", git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94" }
